#115 FXML CSS Sample - extended FxmlSampleApplication with CSS sample

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
@@ -76,6 +76,9 @@ Contributor(s): .
                 <artifactId>javafx-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>org.drombler.commons.fx.samples.fxml.FxmlSampleApplication</mainClass>
+                    <options>
+                        <option>-Djava.util.logging.config.file=src/main/conf/logging.properties</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
