#115 FXML CSS Sample - changed 5th sample_ attribute -> nested element - clean-up

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/CSSSamplePane.properties
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/src/main/resources/org/drombler/commons/fx/samples/fxml/CSSSamplePane.properties
@@ -3,4 +3,4 @@ label.1.text=@a.css (relative URL):
 label.2.text=@style/b.css (relative URL):
 label.3.text=@../c.css (relative URL):
 label.4.text=@/d.css (absolute URL):
-label.5.text=@/style/e.css (absolute URL):
+label.5.text=/style/e.css (absolute URL):
