--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-fxml/pom.xml
@@ -75,7 +75,7 @@ Contributor(s): .
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>org.drombler.commons.fx.samples.fxml.FxmlSampleApplication</mainClass>
+                    <mainClass>org.drombler.commons.fx.samples.fxml.FXMLLoadersSampleApplication</mainClass>
                     <options>
                         <option>-Djava.util.logging.config.file=src/main/conf/logging.properties</option>
                     </options>
